--- a/exercicios/agrupamento de tags/style.css
+++ b/exercicios/agrupamento de tags/style.css
@@ -2,44 +2,48 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-body{
-    background-color: #C0C0C0;
+body {
+    background-color: #ffffff;
 }
 
-header{
-    background-color: #1C1C1C;
+header {
+    background-color: #000000;
 }
 
-header > h1{
-    color: #DCDCDC;
+header > h1 {
+    color: #ffffff;
 }
 
-nav{
-    background-color: #A9A9A9;
+nav {
+    background-color: #f5f5f5;
     padding-top: 5px;
     box-shadow: 5px 3px 7px rgba(0, 0, 0, 0.479);
 }
 
-nav > a{
-    color: black;
+nav > a {
+    color: #000000;
     text-decoration: none;
     margin-right: 5px;
 }
 
-nav a:hover{
+/* pseudoelemento :hover */
+nav a:hover {
     text-decoration: underline;
 }
 
 main{
-    background-color: #A9A9A9;
+    background-color: #f5f5f5;
     box-shadow: 5px 3px 7px rgba(0, 0, 0, 0.479);
     border-radius: 5px;
 }
 
 footer{
-    color: #DCDCDC;
-    text-align: center;
     background-color: #1C1C1C;
     padding: 10px;
-    margin: 0;
+}
+
+footer > p {
+    text-align: center;
+    color: #ffffff;
+    font-size: smaller;
 }
