--- a/exercicios/agrupamento de tags/style.css
+++ b/exercicios/agrupamento de tags/style.css
@@ -28,7 +28,8 @@ nav > a {
 
 /* pseudoelemento :hover */
 nav a:hover {
-    text-decoration: underline;
+    background-color: blanchedalmond;
+    padding: 2px;
 }
 
 main{
